# rsq

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  bmpe.html  design.md  package.json  test_mining.rs  theory.md
src/: lib.rs
src/mining/: hash_algorithms.rs  mod.rs  quantum_miner.rs  quantum_miner.rs.backup  stratum_v1.rs
src/quantum/: JS_USAGE.md  MATH.md  algorithms.rs  circuit.rs  complex.rs  error_correction.rs  math.rs  matrix.rs  mod.rs  noise.rs
src/quantum/algorithms/: mod.rs
src/quantum/circuit/: mod.rs
src/quantum/core/: complex.rs  matrix.rs  mod.rs
src/quantum/error_correction/: mod.rs
src/quantum/hamiltonian/: mod.rs
src/quantum/math/: mod.rs
src/quantum/noise/: mod.rs
src/quantum/resonance/: mod.rs  prime_wave.rs  riemann_zeta.rs
src/quantum/state/: mod.rs  prime_quantum.rs  prime_quantum.rs.backup
src/quantum/state/tests/: integration.rs  mod.rs  quantum_mining.rs
src/quantum/tests/: mod.rs
src/quantum/tomography/: mod.rs  tests.rs
stratum-miner/: Cargo.toml
stratum-miner/src/: main.rs
