[package]
name = "rsq"
version = "0.1.0"
authors = ["Sebastian Schepis"]
edition = "2021"
description = "A quantum computing library for blockchain mining optimization"
repository = "https://github.com/sschepis/rsq"
license = "MIT"
categories = ["wasm", "quantum", "cryptography"]
keywords = ["quantum", "wasm", "blockchain", "mining", "cryptography"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.95"
js-sys = "0.3.72"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
