[package]
name = "rsq"
version = "0.1.0"
authors = ["Sebastian Schepis"]
edition = "2021"
description = "A quantum computing library for blockchain mining optimization"
repository = "https://github.com/sschepis/rsq"
license = "MIT"
categories = ["wasm", "quantum", "cryptography"]
keywords = ["quantum", "wasm", "blockchain", "mining", "cryptography"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.2.0"
serde_json = "1.0"
csv = "1.3.0"
wasm-bindgen = "0.2.95"
js-sys = "0.3.72"
rand = "0.8.5"
getrandom = { version = "0.2.15", features = ["js"] }
sha2 = "0.10.8"
hex = "0.4.3"
tokio = { version = "1.35.1", features = ["full"] }
futures = "0.3.30"
num_cpus = "1.16.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
