[package]
name = "rsq"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.8"
rand = "0.8.5"
rayon = "1.8.0"
num-complex = "0.4.4"
equihash = "0.2.0"
scrypt = "0.11.0"
clap = { version = "4.4.11", features = ["derive"] }
tokio = { version = "1.35.1", features = ["full"] }
log = "0.4.20"
signal-hook = "0.3.17"
colored = "2.1.0"
serde_json = "1.0.111"
hex = "0.4.3"
num_cpus = "1.16.0"
rustfft = "6.1.0"
primitive-types = "0.12.2"
